macros/tests/compile_fail/self_parameter.stderr
error: [melbi] normal typed argument expected (name: type)
 --> tests/compile_fail/self_parameter.rs:9:15
  |
9 |     fn method(self) -> i64 {
  |               ^^^^
